# Neotron-Pico-BIOS

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  memory.x
.cargo/: config.toml
.github/workflows/: build.yml  clippy.yml  format.yml  release.yml  rust.yml
src/: console.rs  flash1002.txt  freebsd_cp850.rs  i2s.rs  logo.ansi  main.rs  mcp23s17.rs  multicore.rs  rtc.rs  sdcard.rs  test-sample.raw  thumbv6m-none-eabi-flash1002-libneotron_os.txt  tlv320aic23b.rs
src/mutex/: mod.rs
src/vga/: font.rs  font16.rs  font8.rs  mod.rs  rgb.rs
