[package]
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
resolver = "2"
readme = "README.md"
license = "GPL-3.0-or-later"
name = "neotron-pico-bios"
version = "0.2.0"

[dependencies]
# Useful Cortex-M specific functions (e.g. SysTick)
cortex-m = "0.7"
# The Raspberry Pi Pico HAL
rp-pico = "0.3"
# Cortex-M run-time (or start-up) code
cortex-m-rt = "0.7"
# The BIOS API we export to the OS
neotron-common-bios = { git = "https://github.com/Neotron-Compute/Neotron-Common-BIOS.git" }
# For time keeping/handling
embedded-time = "0.12"
# For the RP2040 bootloader
rp2040-boot2 = "0.2"
# For hardware abstraction traits
embedded-hal ="0.2"
# Gives us formatted PC-side logging
defmt = "0.3"
# Sends defmt logs to the SWD debugger
defmt-rtt = "0.3"
# Send panics to the debugger
panic-probe = "0.2"
# Fetches git hashes from git at compile time
git-version = "0.3"
# RP2040 PIO assembler
pio = "0.2"
# Macros for RP2040 PIO assembler
pio-proc = "0.2"

[features]
default = [
    "defmt-default",
]
defmt-default = []
# Enables trace logs
defmt-trace = []
# Enables debug logs
defmt-debug = []
# Enables info logs
defmt-info = []
# Enables warn logs
defmt-warn = []
# Enables error logs
defmt-error = []

[[bin]]
name = "neotron-pico-bios"
test = false
bench = false

[profile.release]
# better optimizations
codegen-units = 1
# symbols are nice and they don't increase the size on Flash
debug = true
# better optimizations
lto = true
